--- a/languages.toml
+++ b/languages.toml
@@ -553,6 +553,8 @@ roots = []
 comment-token = "#"
 language-servers = [ "rnix-lsp" ]
 indent = { tab-width = 2, unit = "  " }
+auto-format = true
+formatter = { command = "alejandra" , args = ["-q"] }
 
 [[grammar]]
 name = "nix"
