--- a/helix-vcs/Cargo.toml
+++ b/helix-vcs/Cargo.toml
@@ -11,9 +11,9 @@ homepage = "https://helix-editor.com"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-git2 = { version = "0.13", default-features = false }
 similar = "2.1"
 ropey = "1.3"
+git-repository = "0.23.1"
 
 [dev-dependencies]
 tempfile = "3.3"
