--- a/helix-vcs/Cargo.toml
+++ b/helix-vcs/Cargo.toml
@@ -11,7 +11,13 @@ homepage = "https://helix-editor.com"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
 git-repository = {version = "0.23.1", default-features = false}
+tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "parking_lot", "macros"] }
+similar = "2.2"
+ropey = { version = "1.5", default-features = false, features = ["simd"] }
+arc-swap = "1"
+
 
 [dev-dependencies]
 tempfile = "3.3"
