--- a/helix-vcs/Cargo.toml
+++ b/helix-vcs/Cargo.toml
@@ -15,7 +15,7 @@ homepage = "https://helix-editor.com"
 git-repository = { version = "0.23.1", default-features = false }
 tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "parking_lot", "macros"] }
 similar = "2.2"
-ropey = { version = "1.5", default-features = false, features = ["simd"] }
+helix-core = { version = "0.6", path = "../helix-core" }
 arc-swap = "1"
 
 
